Added the ability to modify players
