# server/docs/swagger.json
@@ -413,7 +413,7 @@
         },
         "/spreadsheets/{id}/player": {
             "post": {
-                "description": "create a new spreadsheet with the provided details",
+                "description": "create a new player with the provided details",
                 "consumes": [
                     "application/json"
                 ],
@@ -423,7 +423,7 @@
                 "tags": [
                     "spreadsheets"
                 ],
-                "summary": "Create a new spreadsheet",
+                "summary": "Create a new player",
                 "parameters": [
                     {
                         "type": "string",
@@ -433,8 +433,8 @@
                         "required": true
                     },
                     {
-                        "description": "Spreadsheet Info",
-                        "name": "spreadsheet",
+                        "description": "Player",
+                        "name": "player",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -457,6 +457,62 @@
                     },
                     "422": {
                         "description": "Bad request - missing element",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/spreadsheets/{id}/player/": {
+            "delete": {
+                "description": "Removes a player from the spreadsheet specified by ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "spreadsheets"
+                ],
+                "summary": "Remove an existing player",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Spreadsheet ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Player",
+                        "name": "player",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Player"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Player successfully removed"
+                    },
+                    "400": {
+                        "description": "Bad request - invalid path parameters",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Player not found",
                         "schema": {
                             "$ref": "#/definitions/models.HTTPError"
                         }
@@ -500,7 +556,7 @@
                     },
                     {
                         "description": "Action Info",
-                        "name": "spreadsheet",
+                        "name": "playerAction",
                         "in": "body",
                         "required": true,
                         "schema": {
